<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily remainder time" />

        <EditText
            android:id="@+id/reminderTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="HH:MM"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum distance search (in miles)" />

        <EditText
            android:id="@+id/maxDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/genders"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Account type" />

        <Spinner
            android:id="@+id/accountTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/accounTypes"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Interested age range" />

        <EditText
            android:id="@+id/ageRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="save" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>