<resources>
    <string name="app_name">HelloWorld</string>
    <string name="filename">Yahya 04/25/2018</string>
    <string name="doberr">You are not allowed to signup, you\'re under 18 according to your date of birth!</string>
    <string name="dobmsg">You entered an invalid date of birth!</string>
    <string name="usernameerror">Username required!</string>
    <string name="nameerror">Name Required!</string>
    <string name="ageerror">Age Required!</string>
    <string name="emailerror">Invalid email!</string>
    <string name="thanks">Thanks for Signing Up </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="dob">Date of Birth (mm/dd/yyyy)</string>
    <string name="submit">Submit</string>
    <string name="createnew">Create New Account</string>
    <string name="description">Description</string>
    <string name="job">Occupation</string>
    <string name="proname">Name: </string>
    <string name="proage">Age: </string>
    <string name="projob">Occupation: </string>
    <string name="joberror">please enter a job title</string>
    <string name="descripterror">please enter a description</string>
    <string name="prodescription">Description:</string>
    <string name="likebutton">LIKE</string>
    <string name="profiletab">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>

    <!--<string name="hello">Hello World</string>-->
    <!--<string name="full_info">Full Info</string>-->
    <!--<string name="info">Yahya Hussein. Created 4-6-2018. I love shrimp pad thai(spicy).</string>-->
    <string-array name="accounTypes" >
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string-array name="genders" >
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>
