...
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:hint="@string/description" />


        <Button android:id="@+id/submitBtn"
            android:layout_margin="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/submit"/>
    </LinearLayout>
...
